--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,13 @@ dependencies:
   flutter:
     sdk: flutter
 
+  dio: ^5.7.0
+  equatable: ^2.0.7
+  get_it: ^8.0.3
   mapbox_maps_flutter: ^2.4.1
+  injectable: ^2.5.0
+  sqflite: ^2.4.1
+  uuid: ^4.5.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -49,6 +55,10 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
 
+  build_runner: ^2.4.14
+  injectable_generator: ^2.6.2
+
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -61,9 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/marker.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
