--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   injectable: ^2.5.0
   sqflite: ^2.4.1
   uuid: ^4.5.1
+  shared_preferences: ^2.3.4
+  crypt: ^4.3.1
+  rxdart: ^0.28.0
+  path_provider: ^2.1.5
+  image_picker: ^1.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
