--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   rxdart: ^0.28.0
   path_provider: ^2.1.5
   image_picker: ^1.1.2
+  flutter_bloc: ^8.1.6
+  super_context_menu: ^0.8.24
+  go_router: ^14.6.2
 
 
   # The following adds the Cupertino Icons font to your application.
