--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,8 @@ dependencies:
   path_provider: ^2.1.5
   image_picker: ^1.1.2
   flutter_bloc: ^8.1.6
-  super_context_menu: ^0.8.24
   go_router: ^14.6.2
+  intl: ^0.20.1
 
 
   # The following adds the Cupertino Icons font to your application.
